--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -156,80 +156,6 @@
         </table>
         <hr class="soft">
 
-<!-- Education -->
-
-<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
-  <h2>Education</h2>
-</button>
-<div id="content-education" class="collapse in">
-
-<table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
-
-    <tr>
-        <td style="padding:10px;width:25%;vertical-align:top">
-            <div class="one">
-                <img src='images/tum-logo.png' width="140" class="side-image;center">
-            </div>
-        </td>
-        <td style="padding:10px;width:75%;vertical-align:top">
-            <papertitle><big><b>Technical University of Munich</b></big></papertitle>
-            <br>
-            <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
-            <br>
-            Oct 2021 - Jul 2024
-            <br>
-            <p align="justify">
-              <details>
-                <summary>Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">Project Page</a></summary> 
-                <!--ul>
-                    <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
-                    <br>                               
-                </ul-->
-                <br>
-                <b>Course Work:</b>
-                <ul>
-                    <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
-                    <br>
-                    <li align="justify"><b>Mechanics:</b> Advanced Fluid Mechanics, AI in Computational Mechanics, Computational Material Modeling I, Computational Material Modeling II, Computational Fluid Dynamics, Continuum Mechanics, Finite Element Methods I  </li>
-                    <br>
-                    <!--li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical Optimization (Robot Design and Control), Advanced Deep Learning in Physics.  </li> 
-                    <br>
-                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I & II, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II, Advanced Fluid Dynamics *   </li>
-                    <br-->
-                    
-                </ul>
-              </details>
-              </p>
-
-        </td>
-    </tr>
-
-    <tr>
-      <td style="padding:10px;width:25%;vertical-align:top">
-          <div class="one">
-              <img src='images/ned-logo.png' width="140" class="side-image">
-          </div>
-      </td>
-      <td style="padding:10px;width:75%;vertical-align:top">
-          <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
-          <br>
-          <papertitle style="color:gray"><big>Bachelors of Science </big></papertitle><papertitle><big>Mechanical Engineering</big></papertitle>
-          <br>
-          Dec 2015 - Sep 2019
-          <br>
-          <p align="justify">
-            <details>
-              <summary>Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets.
-              <!--br-->
-              <a href="https://doi.org/10.1002/htj.21986">[1]</a></summary>             
-            </details>
-            </p>
-      </td>
-  </tr>
-
-</tbody></table>
-</div>
-<hr class="soft">
 
 <!-- Experience -->
 
@@ -257,9 +183,9 @@
         <br>
         <p align="justify">
           <details>
-          <summary>Conducted research in the area of zero shot approches for “Open World 3D Scene Understanding” utilizing foundation and large language models; co-supervised by <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-ICTL</a> and <a href="https://www.cee.ed.tum.de/cms/home/">TUM-CMS</a>.</summary>            
+          <summary>Conducted R&D in the area of zero shot approches for “Open World 3D Scene Understanding” utilizing foundation and large language models; co-supervised by <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-ICTL</a> and <a href="https://www.cee.ed.tum.de/cms/home/">TUM-CMS</a>.</summary>            
           <ul>
-              <li align="justify">Developed incremental and scalable framework for zero-shot 3D scene understanding utilizing foundation and large language models. </li>
+              <li align="justify">Developed <a href="https://opensu3d.github.io/">OpenSU3D</a> an incremental and scalable approch for zero-shot 3D scene understanding utilizing foundation and large language models. </li>
               <li align="justify">Quantitatively and qualitatively demonstrated effectiveness of open vocabulary segmentation and context-based instance retrieval, exceeding state-of-the-art approaches. </li>
               <li align="justify">Explored downstream applications such as 3D instance segmentation, automatic labeling, and spatial reasoning (chat with scene using LLM). </li>
               <li align="justify">Currently, working on research paper to publish findings. </li>
@@ -422,6 +348,80 @@
 </div>
 <hr class="soft">
 
+<!-- Education -->
+
+<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+  <h2>Education</h2>
+</button>
+<div id="content-education" class="collapse in">
+
+<table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
+
+    <tr>
+        <td style="padding:10px;width:25%;vertical-align:top">
+            <div class="one">
+                <img src='images/tum-logo.png' width="140" class="side-image;center">
+            </div>
+        </td>
+        <td style="padding:10px;width:75%;vertical-align:top">
+            <papertitle><big><b>Technical University of Munich</b></big></papertitle>
+            <br>
+            <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
+            <br>
+            Oct 2021 - Jul 2024
+            <br>
+            <p align="justify">
+              <details>
+                <summary>Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">OpenSU3D</a></summary> 
+                <!--ul>
+                    <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
+                    <br>                               
+                </ul-->
+                <br>
+                <b>Course Work:</b>
+                <ul>
+                    <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
+                    <br>
+                    <li align="justify"><b>Mechanics:</b> Advanced Fluid Mechanics, AI in Computational Mechanics, Computational Material Modeling I, Computational Material Modeling II, Computational Fluid Dynamics, Continuum Mechanics, Finite Element Methods I  </li>
+                    <br>
+                    <!--li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical Optimization (Robot Design and Control), Advanced Deep Learning in Physics.  </li> 
+                    <br>
+                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I & II, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II, Advanced Fluid Dynamics *   </li>
+                    <br-->
+                    
+                </ul>
+              </details>
+              </p>
+
+        </td>
+    </tr>
+
+    <tr>
+      <td style="padding:10px;width:25%;vertical-align:top">
+          <div class="one">
+              <img src='images/ned-logo.png' width="140" class="side-image">
+          </div>
+      </td>
+      <td style="padding:10px;width:75%;vertical-align:top">
+          <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
+          <br>
+          <papertitle style="color:gray"><big>Bachelors of Science </big></papertitle><papertitle><big>Mechanical Engineering</big></papertitle>
+          <br>
+          Dec 2015 - Sep 2019
+          <br>
+          <p align="justify">
+            <details>
+              <summary>Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets.
+              <!--br-->
+              <a href="https://doi.org/10.1002/htj.21986">[1]</a></summary>             
+            </details>
+            </p>
+      </td>
+  </tr>
+
+</tbody></table>
+</div>
+<hr class="soft">
 
 
         
