--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -557,7 +557,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <!--<h2>Projects</h2>-->
-              <p> These section include projects completed during courses.  
+              <p> These include coursework, side projects and unpublished research work.
               </p>
             </td>
           </tr>
