--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -372,24 +372,22 @@
             <br>
             <p align="justify">
               <details>
-                <summary>Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">OpenSU3D</a></summary> 
-                <!--ul>
-                    <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
-                    <br>                               
-                </ul-->
+                Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">OpenSU3D</a>
                 <br>
+                <b>Course Work:</b>
+                <ul>
+                    <li align="justify">Computation in Engineering I & II (C++), Numerical Optimization, Elements of Machine Learning, Cyber Physical System, Advance Deep Learning for Physics, Professional Software Development,  Visual Data Analytics … </li> 
+                    <br>
+                </ul>   
+                <!--br>
                 <b>Course Work:</b>
                 <ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>
                     <li align="justify"><b>Mechanics:</b> Advanced Fluid Mechanics, AI in Computational Mechanics, Computational Material Modeling I, Computational Material Modeling II, Computational Fluid Dynamics, Continuum Mechanics, Finite Element Methods I  </li>
                     <br>
-                    <!--li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical Optimization (Robot Design and Control), Advanced Deep Learning in Physics.  </li> 
-                    <br>
-                    <li align="justify"><b>Mechanics:</b> Computational Material Modeling I & II, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II, Advanced Fluid Dynamics *   </li>
-                    <br-->
                     
-                </ul>
+                </ul-->
               </details>
               </p>
 
@@ -411,9 +409,13 @@
           <br>
           <p align="justify">
             <details>
-              <summary>Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets.
-              <!--br-->
-              <a href="https://doi.org/10.1002/htj.21986">[1]</a></summary>             
+              Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">Paper</a>
+              <br>
+                <b>Course Work:</b>
+                <ul>
+                    <li align="justify">Advanced Calculus & Linear Algebra, Advanced Mathematical Techniques, Applied Probability & Statistics, Operations Management, Machine Control Systems, Clean Energy Technologies, Computer Programming & Applications …                      </li> 
+                    <br>
+                </ul>            
             </details>
             </p>
       </td>
