--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -371,7 +371,6 @@
             Oct 2021 - Jul 2024
             <br>
             <p align="justify">
-              <details>
                 Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">OpenSU3D</a>
                 <br>
                 <b>Course Work:</b>
@@ -388,7 +387,6 @@
                     <br>
                     
                 </ul-->
-              </details>
               </p>
 
         </td>
@@ -408,15 +406,13 @@
           Dec 2015 - Sep 2019
           <br>
           <p align="justify">
-            <details>
-              Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">Paper</a>
+              Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">Link</a>
               <br>
                 <b>Course Work:</b>
                 <ul>
                     <li align="justify">Advanced Calculus & Linear Algebra, Advanced Mathematical Techniques, Applied Probability & Statistics, Operations Management, Machine Control Systems, Clean Energy Technologies, Computer Programming & Applications …                      </li> 
                     <br>
                 </ul>            
-            </details>
             </p>
       </td>
   </tr>
