--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -448,6 +448,9 @@
               {% if post.paper %}
               <a href="{{post.paper}}">paper</a> /
               {% endif %}
+              {% if post.web %}
+              <a href="{{post.web}}">web</a> /
+              {% endif %}
               {% if post.video %}
               <a href="{{post.video}}">video</a> /
               {% endif %}
