--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,14 +121,18 @@
               <!--p align="justify">Hi 👋, I'm Rafay! I work with mathematical models, convert them to code to solve problems in engineering and science.  </p--> 
 
           
-              <p align="justify">Hi, I'm Rafay 👋. I am masters student, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
-                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. I conducted my master's thesis research in the area of 'Open World 3D Scene Understanding' at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-Intelligent Cloud Technologies Lab</a>, 
+              <p align="justify">Hi, I'm Rafay 👋. M.Sc. graduate, from <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>.
+                I conducted my master's thesis research in the area of 'Open World 3D Scene Understanding' at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-Intelligent Cloud Technologies Lab</a>, 
                 before this I worked as a Robotics Research Intern mainly focusing on life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on diverse robotics projects.
+              </p>
+              <p align="justify">
+                My research interest lie in Machine Learning, Robotics, Computer Vision and Physics Simulation. I have ~3 years of experience working on diverse R&D projects in these areas.
               </p>
               
               
               <!--p align="justify">
+              <a href="https://www.tum.de/en/">Technical University of Munich</a>
                 From Jul-2020 to Oct-2021, I worked at the <a href="https://nust.edu.pk/">National University of Science and Technology</a>, 
                 as part of the <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked on the design and development of drones 
                 (fixed wing and vertical take of and landing aerial vehicles) for urban environments. 
