--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,14 +121,12 @@
               <!--p align="justify">Hi 👋, I'm Rafay! I work with mathematical models, convert them to code to solve problems in engineering and science.  </p--> 
 
           
-              <p align="justify">Hi, I'm Rafay 👋. M.Sc. graduate, from <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>.
-                I conducted my master's thesis research in the area of 'Open World 3D Scene Understanding' at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-Intelligent Cloud Technologies Lab</a>, 
-                before this I worked as a Robotics Research Intern mainly focusing on life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
-                <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on diverse robotics projects.
-              </p>
-              <p align="justify">
-                My research interest lie in Machine Learning, Robotics, Computer Vision and Physics Simulation. I have ~3 years of experience working on diverse R&D projects in these areas.
-              </p>
+              <<p align="justify">
+                Greetings, I'm Rafay 👋. I hold a Master’s degree from the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, where I focused on scientific computing, robotics and computer vision. My master's thesis, conducted at the <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei Intelligent Cloud Technologies Lab</a>, centered on advancing <a href= "http://opensu3d.github.io/">Open World 3D Scene Understanding</a>. Previously, I served as a Robotics Research Intern, concentrating on lifelong localization and mapping. During my studies, I also worked as a Student Research Assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, contributing to various robotics projects.
+              </p>  
+                <p align="justify">
+                My primary interests lie in robotics, computer vision, machine learning, and physics simulation, with ~ three years of experience in R&D, I have worked on a wide range of projects across these fields.
+                </p>
               
               
               <!--p align="justify">
