--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
 
           
               <<p align="justify">
-                Greetings, I'm Rafay 👋. I hold a Master’s degree from the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, where I focused on scientific computing, robotics and computer vision. My master's thesis, conducted at the <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei Intelligent Cloud Technologies Lab</a>, centered on advancing <a href= "http://opensu3d.github.io/">Open World 3D Scene Understanding</a>. Previously, I served as a Robotics Research Intern, concentrating on lifelong localization and mapping. During my studies, I also worked as a Student Research Assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, contributing to various robotics projects.
+                Greetings, I'm Rafay 👋. I hold a Master’s degree from the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, where I focused on scientific computing, robotics and 3D computer vision. My master's thesis, conducted at the <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei Intelligent Cloud Technologies Lab</a>, centered on advancing <a href= "http://opensu3d.github.io/">Open World 3D Scene Understanding</a>. Previously, I served as a Robotics Research Intern, concentrating on lifelong localization and mapping. During my studies, I also worked as a Student Research Assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, contributing to various robotics projects.
               </p>  
                 <p align="justify">
                 My primary interests lie in robotics, computer vision, machine learning, and physics simulation, with ~ three years of experience in R&D, I have worked on a wide range of projects across these fields.
@@ -172,7 +172,7 @@
   <tr>
     <td style="padding:10px;width:25%;vertical-align:top">
         <div class="one">
-            <img src='images/huawei-logo.png' width="140" class="side-image">
+            <img src='images/huawei-logo.png' width="120" class="side-image">
         </div>
     </td>
     <td style="padding:10px;width:75%;vertical-align:top">
@@ -223,7 +223,7 @@
     <tr>
         <td style="padding:10px;width:25%;vertical-align:top">
             <div class="one">
-                <img src='images/tum-logo.png' width="140" class="side-image">
+                <img src='images/tum-logo.png' width="120" class="side-image">
             </div>
         </td>
         <td style="padding:10px;width:75%;vertical-align:top">
@@ -279,7 +279,7 @@
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
-              <img src='images/nust-logo.png' width="140" class="side-image">
+              <img src='images/nust-logo.png' width="120" class="side-image">
           </div>
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
@@ -315,7 +315,7 @@
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
-              <img src='images/ned-logo.png' width="140" class="side-image">
+              <img src='images/ned-logo.png' width="120" class="side-image">
           </div>
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
@@ -362,7 +362,7 @@
     <tr>
         <td style="padding:10px;width:25%;vertical-align:top">
             <div class="one">
-                <img src='images/tum-logo.png' width="140" class="side-image;center">
+                <img src='images/tum-logo.png' width="120" class="side-image;center">
             </div>
         </td>
         <td style="padding:10px;width:75%;vertical-align:top">
@@ -397,7 +397,7 @@
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
           <div class="one">
-              <img src='images/ned-logo.png' width="140" class="side-image">
+              <img src='images/ned-logo.png' width="120" class="side-image">
           </div>
       </td>
       <td style="padding:10px;width:75%;vertical-align:top">
