--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,7 +121,7 @@
               <!--p align="justify">Hi 👋, I'm Rafay! I work with mathematical models, convert them to code to solve problems in engineering and science.  </p--> 
 
           
-              <<p align="justify">
+              <p align="justify">
                 Greetings, I'm Rafay 👋. I hold a Master’s degree from the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, where I focused on scientific computing, robotics and 3D computer vision. My master's thesis, conducted at the <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei Intelligent Cloud Technologies Lab</a>, centered on advancing <a href= "http://opensu3d.github.io/">Open World 3D Scene Understanding</a>. Previously, I served as a Robotics Research Intern, concentrating on lifelong localization and mapping. During my studies, I also worked as a Student Research Assistant at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, contributing to various robotics projects.
               </p>  
                 <p align="justify">
@@ -352,47 +352,32 @@
 
 <!-- Education -->
 
-<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
   <h2>Education</h2>
 </button>
 <div id="content-education" class="collapse in">
+    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <tr>
+            <td style="padding:10px;width:25%;vertical-align:top">
+                <div class="one">
+                    <img src='images/tum-logo.png' width="120" class="side-image;center">
+                </div>
+            </td>
+            <td style="padding:10px;width:75%;vertical-align:top">
+                <h3><b>Technical University of Munich</b></h3>
+                <p><em>Masters of Science in Computational Mechanics</em></p>
+                <p>Oct 2021 - Jul 2024</p>
+                <p>
+                    Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">OpenSU3D</a>
+                    <br><br>
+                    <b>Course Work:</b>
+                    <ul>
+                        <li align="justify">Computation in Engineering I & II (C++), Numerical Optimization, Elements of Machine Learning, Cyber Physical System, Advanced Deep Learning for Physics, Professional Software Development, Visual Data Analytics …</li>
+                    </ul>
+                </p>
+            </td>
+        </tr>
 
-<table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
-
-    <tr>
-        <td style="padding:10px;width:25%;vertical-align:top">
-            <div class="one">
-                <img src='images/tum-logo.png' width="120" class="side-image;center;width:auto; height:auto; max-width:100%" /></a>">
-            </div>
-        </td>
-        <td style="padding:10px;width:75%;vertical-align:top">
-            <papertitle><big><b>Technical University of Munich</b></big></papertitle>
-            <br>
-            <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
-            <br>
-            Oct 2021 - Jul 2024
-            <br>
-            <p align="justify">
-                Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">OpenSU3D</a>
-                <br>
-                <b>Course Work:</b>
-                <ul>
-                    <li align="justify">Computation in Engineering I & II (C++), Numerical Optimization, Elements of Machine Learning, Cyber Physical System, Advance Deep Learning for Physics, Professional Software Development,  Visual Data Analytics … </li> 
-                    <br>
-                </ul>   
-                <!--br>
-                <b>Course Work:</b>
-                <ul>
-                    <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
-                    <br>
-                    <li align="justify"><b>Mechanics:</b> Advanced Fluid Mechanics, AI in Computational Mechanics, Computational Material Modeling I, Computational Material Modeling II, Computational Fluid Dynamics, Continuum Mechanics, Finite Element Methods I  </li>
-                    <br>
-                    
-                </ul-->
-              </p>
-
-        </td>
-    </tr>
 
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
