--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -352,32 +352,38 @@
 
 <!-- Education -->
 
-<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+<button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
   <h2>Education</h2>
 </button>
 <div id="content-education" class="collapse in">
-    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-        <tr>
-            <td style="padding:10px;width:25%;vertical-align:top">
-                <div class="one">
-                    <img src='images/tum-logo.png' width="120" class="side-image;center">
-                </div>
-            </td>
-            <td style="padding:10px;width:75%;vertical-align:top">
-                <h3><b>Technical University of Munich</b></h3>
-                <p><em>Masters of Science in Computational Mechanics</em></p>
-                <p>Oct 2021 - Jul 2024</p>
-                <p>
-                    Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">OpenSU3D</a>
-                    <br><br>
-                    <b>Course Work:</b>
-                    <ul>
-                        <li align="justify">Computation in Engineering I & II (C++), Numerical Optimization, Elements of Machine Learning, Cyber Physical System, Advanced Deep Learning for Physics, Professional Software Development, Visual Data Analytics …</li>
-                    </ul>
-                </p>
-            </td>
-        </tr>
 
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"></table>
+
+    <tr>
+      <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+            <div class="one">
+                <img src='images/tum-logo.png' width="120" class="side-image;center", style="width:auto; height:auto; max-width:100%">
+            </div>
+        </td>
+        <td style="padding:2.5%;width:75%;vertical-align:middle">
+            <papertitle><big><b>Technical University of Munich</b></big></papertitle>
+            <br>
+            <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
+            <br>
+            Oct 2021 - Jul 2024
+            <br>
+            <p align="justify">
+                Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">OpenSU3D</a>
+                <br>
+                <b>Course Work:</b>
+                <ul>
+                    <li align="justify">Computation in Engineering I & II (C++), Numerical Optimization, Elements of Machine Learning, Cyber Physical System, Advance Deep Learning for Physics, Professional Software Development,  Visual Data Analytics … </li> 
+                    <br>
+                </ul>   
+              </p>
+
+        </td>
+    </tr>
 
     <tr>
       <td style="padding:10px;width:25%;vertical-align:top">
