--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -357,15 +357,15 @@
 </button>
 <div id="content-education" class="collapse in">
 
-  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"></table>
+<table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+        <td style="padding:10px;width:25%;vertical-align:top">
             <div class="one">
-                <img src='images/tum-logo.png' width="120" class="side-image;center", style="width:auto; height:auto; max-width:100%">
+                <img src='images/tum-logo.png' width="120" class="side-image;center">
             </div>
         </td>
-        <td style="padding:2.5%;width:75%;vertical-align:middle">
+        <td style="padding:10px;width:75%;vertical-align:top">
             <papertitle><big><b>Technical University of Munich</b></big></papertitle>
             <br>
             <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
@@ -380,6 +380,15 @@
                     <li align="justify">Computation in Engineering I & II (C++), Numerical Optimization, Elements of Machine Learning, Cyber Physical System, Advance Deep Learning for Physics, Professional Software Development,  Visual Data Analytics … </li> 
                     <br>
                 </ul>   
+                <!--br>
+                <b>Course Work:</b>
+                <ul>
+                    <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
+                    <br>
+                    <li align="justify"><b>Mechanics:</b> Advanced Fluid Mechanics, AI in Computational Mechanics, Computational Material Modeling I, Computational Material Modeling II, Computational Fluid Dynamics, Continuum Mechanics, Finite Element Methods I  </li>
+                    <br>
+                    
+                </ul-->
               </p>
 
         </td>
