--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -362,7 +362,7 @@
     <tr>
         <td style="padding:2.5px;width:25%;vertical-align:top">
             <div class="one">
-                <img src='images/tum-logo.png' width="120" class="side-image;center">
+                <img src='images/tum-logo.png' style="width:auto; height:auto; max-width:100%">
             </div>
         </td>
         <td style="padding:2.5px;width:75%;vertical-align:top">
@@ -397,7 +397,7 @@
     <tr>
       <td style="padding:2.5px;width:25%;vertical-align:top">
           <div class="one">
-              <img src='images/ned-logo.png' width="120" class="side-image">
+              <img src='images/ned-logo.png' style="width:auto; height:auto; max-width:100%">
           </div>
       </td>
       <td style="padding:2.5px;width:75%;vertical-align:top">
