--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -356,8 +356,7 @@
   <h2>Education</h2>
 </button>
 <div id="content-education" class="collapse in">
-
-<table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
     <tr>
         <td style="padding:2.5px;width:25%;vertical-align:top">
