--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -359,10 +359,10 @@
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
     <tr>
-        <td style="padding:2.5px;width:25%;vertical-align:top">
-            <div class="one">
-                <img src='images/tum-logo.png' style="width:auto; height:auto; max-width:100%">
-            </div>
+      <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+            
+                <a src='images/tum-logo.png' style="width:auto; height:auto; max-width:100%"></a>
+            
         </td>
         <td style="padding:2.5px;width:75%;vertical-align:top">
             <papertitle><big><b>Technical University of Munich</b></big></papertitle>
@@ -394,9 +394,9 @@
     </tr>
 
     <tr>
-      <td style="padding:2.5px;width:25%;vertical-align:top">
+      <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
           <div class="one">
-              <img src='images/ned-logo.png' style="width:auto; height:auto; max-width:100%">
+              <a src='images/ned-logo.png' style="width:auto; height:auto; max-width:100%"></a>
           </div>
       </td>
       <td style="padding:2.5px;width:75%;vertical-align:top">
