--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -361,7 +361,7 @@
     <tr>
       <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
             
-                <img src='images/tum-logo.png' style="width:auto; height:auto; max-width:100%"></a>
+                <img src='images/tum-logo.png' style="width:auto; height:auto; "></a>
             
         </td>
         <td style="padding:2.5px;width:75%;vertical-align:top">
@@ -396,7 +396,7 @@
     <tr>
       <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
           <div class="one">
-              <img src='images/ned-logo.png' style="width:auto; height:auto; max-width:100%"></a>
+              <img src='images/ned-logo.png' style="width:auto; height:auto; "></a>
           </div>
       </td>
       <td style="padding:2.5px;width:75%;vertical-align:top">
