--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -359,7 +359,7 @@
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+      <td style="padding:2.5%;width:25%;vertical-align:middle;max-width:120px">
             
                 <img src='images/tum-logo.png' style="width:auto; height:auto; "></a>
             
@@ -394,7 +394,7 @@
     </tr>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+      <td style="padding:2.5%;width:25%;vertical-align:middle;max-width:120px">
           <div class="one">
               <img src='images/ned-logo.png' style="width:auto; height:auto; "></a>
           </div>
