--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -359,7 +359,7 @@
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:middle;max-width:120px">
+      <td style="padding:2.5%;width:25%;vertical-align:top;max-width:120px">
             
                 <img src='images/tum-logo.png' style="width:auto; height:auto; max-width:120px"></a>
             
@@ -394,10 +394,8 @@
     </tr>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:middle;max-width:120px">
-          <div class="one">
-              <img src='images/ned-logo.png' style="width:auto; height:auto; max-width:120px"></a>
-          </div>
+      <td style="padding:2.5%;width:25%;vertical-align:top;">
+            <img src='images/ned-logo.png'></a>
       </td>
       <td style="padding:2.5px;width:75%;vertical-align:top">
           <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
