--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -364,7 +364,7 @@
                 <img src='images/tum-logo.png' style="width:auto; height:auto; max-width:120px"></a>
             
         </td>
-        <td style="padding:2.5px;width:75%;vertical-align:top">
+        <td style="padding:2.5%;width:75%;vertical-align:top">
             <papertitle><big><b>Technical University of Munich</b></big></papertitle>
             <br>
             <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
@@ -394,10 +394,12 @@
     </tr>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:top;">
-            <img src='images/ned-logo.png'></a>
+      <td style="padding:2.5%;width:25%;vertical-align:top;max-width:120px">
+          <div class="one">
+              <img src='images/ned-logo.png' style="width:auto; height:auto; max-width:120px"></a>
+          </div>
       </td>
-      <td style="padding:2.5px;width:75%;vertical-align:top">
+      <td style="padding:2.5%;width:75%;vertical-align:top">
           <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
           <br>
           <papertitle style="color:gray"><big>Bachelors of Science </big></papertitle><papertitle><big>Mechanical Engineering</big></papertitle>
