--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -396,7 +396,7 @@
     <tr>
       <td style="padding:2.5%;width:25%;vertical-align:top;">
           <div class="one">
-              <img src='images/ned-logo.png' style="width:100%; height:auto;"></a>
+              <img src='images/ned-logo.png' style="width:100%; height:auto; min-width:120px"></a>
           </div>
       </td>
       <td style="padding:2.5%;width:75%;vertical-align:top">
