--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -394,9 +394,9 @@
     </tr>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:top; min-width:120px">
+      <td style="padding:2.5%;width:25%;vertical-align:top;">
           <div class="one">
-              <img src='images/ned-logo.png' style="max-width:100%; height:auto; max-width:110px"></a>
+              <img src='images/ned-logo.png' style="width:auto; height:auto; max-width:110px"></a>
           </div>
       </td>
       <td style="padding:2.5%;width:75%;vertical-align:top">
