--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -361,7 +361,7 @@
     <tr>
       <td style="padding:2.5%;width:25%;vertical-align:middle;">
             
-                <img src='images/tum-logo.png' style="width:auto; height:auto;"></a>
+                <img src='images/tum-logo.png' style="width:80%; height:auto;"></a>
             
         </td>
         <td style="padding:2.5%;width:75%;vertical-align:top">
@@ -396,7 +396,7 @@
     <tr>
       <td style="padding:2.5%;width:25%;vertical-align:middle;">
           <div class="one">
-              <img src='images/ned-logo.png' style="width:auto; height:auto;"></a>
+              <img src='images/ned-logo.png' style="width:80%; height:auto;"></a>
           </div>
       </td>
       <td style="padding:2.5%;width:75%;vertical-align:top">
