--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -359,9 +359,9 @@
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:middle;">
+      <td style="padding:2.5%;width:25%;vertical-align:top;">
             
-                <img src='images/tum-logo.png' style="width:80%; height:auto;"></a>
+                <img src='images/tum-logo.png' class="side-image" style="width:80%; height:auto;"></a>
             
         </td>
         <td style="padding:2.5%;width:75%;vertical-align:top">
@@ -394,9 +394,9 @@
     </tr>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:middle;">
+      <td style="padding:2.5%;width:25%;vertical-align:top;">
           <div class="one">
-              <img src='images/ned-logo.png' style="width:80%; height:auto;"></a>
+              <img src='images/ned-logo.png' class="side-image" style="width:80%; height:auto;"></a>
           </div>
       </td>
       <td style="padding:2.5%;width:75%;vertical-align:top">
