--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -359,7 +359,7 @@
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:top;">
+      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;">
             
                 <img src='images/tum-logo.png' class="side-image" style="width:80%; height:auto;"></a>
             
@@ -394,7 +394,7 @@
     </tr>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:top;">
+      <td style="padding:2.5%;width:25%;vertical-align:top; text-align:center;">
           <div class="one">
               <img src='images/ned-logo.png' class="side-image" style="width:80%; height:auto;"></a>
           </div>
