--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -361,7 +361,7 @@
     <tr>
       <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;">
             
-                <img src='images/tum-logo.png' class="side-image" style="width:80%; height:auto;"></a>
+                <img src='images/tum-logo.png' class="side-image" style="width:80%; height:auto;">
             
         </td>
         <td style="padding:2.5%;width:75%;vertical-align:top">
@@ -396,7 +396,7 @@
     <tr>
       <td style="padding:2.5%;width:25%;vertical-align:top; text-align:center;">
           <div class="one">
-              <img src='images/ned-logo.png' class="side-image" style="width:80%; height:auto;"></a>
+              <img src='images/ned-logo.png' class="side-image" style="width:80%; height:auto;">
           </div>
       </td>
       <td style="padding:2.5%;width:75%;vertical-align:top">
