--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -359,7 +359,7 @@
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:collapse;margin-right:auto;margin-left:auto;">
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;">
+        <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
             
                 <img src='images/tum-logo.png' class="side-image" style="width:80%; height:auto;">
             
@@ -394,7 +394,7 @@
     </tr>
 
     <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:top; text-align:center;">
+      <td style="padding:2.5%;width:25%;vertical-align:top; text-align:center;min-width:120px">
           <div class="one">
               <img src='images/ned-logo.png' class="side-image" style="width:80%; height:auto;">
           </div>
