--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -361,7 +361,7 @@
     <tr>
         <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
             
-                <img src='images/tum-logo.png' alt="Logo" class="side-image" style="width:100%; height:auto;">
+                <img src='images/tum-logo.png' style="width:80%; height:auto;" alt="project image">
             
         </td>
         <td style="padding:2.5%;width:75%;vertical-align:top">
@@ -396,7 +396,7 @@
     <tr>
       <td style="padding:2.5%;width:25%;vertical-align:top; text-align:center;min-width:120px">
           <div class="one">
-              <img src='images/ned-logo.png' alt="Logo" class="side-image" style="width:100%; height:auto;">
+              <img src='images/ned-logo.png' style="width:80%; height:auto;" alt="project image">
           </div>
       </td>
       <td style="padding:2.5%;width:75%;vertical-align:top">
