--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -356,7 +356,7 @@
   <h2>Education</h2>
 </button>
 <div id="content-education" class="collapse in">
-  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:collapse;margin-right:auto;margin-left:auto;">
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
     <tr>
         <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
