--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -170,12 +170,12 @@
 
 
   <tr>
-    <td style="padding:10px;width:25%;vertical-align:top">
+    <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
         <div class="one">
-            <img src='images/huawei-logo.png' width="120" class="side-image">
+            <img src='images/huawei-logo.png' style="width:80%; height:auto;" alt="project image">
         </div>
     </td>
-    <td style="padding:10px;width:75%;vertical-align:top">
+    <td style="padding:2.5%;width:75%;vertical-align:top">
         <papertitle><big><b>Huawei Munich</b></big></papertitle>
 
         <br>
@@ -221,12 +221,12 @@
   </tr>
 
     <tr>
-        <td style="padding:10px;width:25%;vertical-align:top">
+      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
             <div class="one">
-                <img src='images/tum-logo.png' width="120" class="side-image">
+                <img src='images/tum-logo.png' style="width:80%; height:auto;" alt="project image">
             </div>
         </td>
-        <td style="padding:10px;width:75%;vertical-align:top">
+        <td style="padding:2.5%;width:75%;vertical-align:top">
            
             <papertitle><big><b>Technical University of Munich</b></big></papertitle>
             <br>
@@ -277,12 +277,12 @@
     </tr>
 
     <tr>
-      <td style="padding:10px;width:25%;vertical-align:top">
+      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
-              <img src='images/nust-logo.png' width="120" class="side-image">
+              <img src='images/nust-logo.png' style="width:80%; height:auto;" alt="project image">
           </div>
       </td>
-      <td style="padding:10px;width:75%;vertical-align:top">
+      <td style="padding:2.5%;width:75%;vertical-align:top">
          
           <papertitle><big><b>National University of Science and Technology</b></big></papertitle>
           <br>
