--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -313,12 +313,12 @@
   </tr>
 
     <tr>
-      <td style="padding:10px;width:25%;vertical-align:top">
+      <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
-              <img src='images/ned-logo.png' width="120" class="side-image">
+              <img src='images/ned-logo.png' style="width:80%; height:auto;" alt="project image">
           </div>
       </td>
-      <td style="padding:10px;width:75%;vertical-align:top">
+      <td style="padding:2.5%;width:75%;vertical-align:top">
           <papertitle><big><b>NED University of Engineering and Technology</b></big></papertitle>
           <br>
           <papertitle style="color:gray"><big>Research Assistant </big></papertitle><papertitle><big>- Department of Mechanical Engineering</big></papertitle>
