--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -360,9 +360,8 @@
 
     <tr>
         <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
-            
-                <img src='images/tum-logo.png' style="width:80%; height:auto;" alt="project image">
-            
+          <a href='images/tum-logo.png'><img src='images/tum-logo.png' alt="project image" style="width:auto; height:auto; max-width:80%;" /></a>
+                
         </td>
         <td style="padding:2.5%;width:75%;vertical-align:top">
             <papertitle><big><b>Technical University of Munich</b></big></papertitle>
@@ -396,7 +395,7 @@
     <tr>
       <td style="padding:2.5%;width:25%;vertical-align:top; text-align:center;min-width:120px">
           <div class="one">
-              <img src='images/ned-logo.png' style="width:80%; height:auto;" alt="project image">
+            <a href='images/ned-logo.png'><img src='images/ned-logo.png' alt="project image" style="width:auto; height:auto; max-width:80%;" /></a>
           </div>
       </td>
       <td style="padding:2.5%;width:75%;vertical-align:top">
