--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -559,7 +559,7 @@
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <!--<h2>Projects</h2>-->
-              <p> These include coursework, side projects. <a href="https://github.com/rafaymhddn">GitHub</a> 
+              <p> These include coursework, assignments, side projects ... <a href="https://github.com/rafaymhddn">(GitHub)</a> 
               </p>
             </td>
           </tr>
