--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -148,7 +148,7 @@
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/rafaymhddn/"> LinkedIn</a> &nbsp;/&nbsp;
-                <a href="https://docs.google.com/document/d/1GvD4gJcm1vsw1i7xJ6f0oyT20FhlqEj4gIxZQDaVFO4/edit?usp=sharing" target="_blank"> CV</a> 
+                <a href="https://drive.google.com/file/d/1T3WHRSNWllxJhtGdnkGuQhCDqPig05jW/view" target="_blank"> CV</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
@@ -179,7 +179,7 @@
         <papertitle><big><b>Huawei Munich</b></big></papertitle>
 
         <br>
-        <papertitle style="color:gray"><big>Masters Thesis Student </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
+        <papertitle style="color:gray"><big>Masters Thesis Research </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
         <br>
         Oct 2023 - Apr 2024
         <br>
