--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -148,7 +148,7 @@
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/rafaymhddn/"> LinkedIn</a> &nbsp;/&nbsp;
-                <a href="https://drive.google.com/file/d/1T3WHRSNWllxJhtGdnkGuQhCDqPig05jW/view" target="_blank"> CV</a> 
+                <a href="https://drive.google.com/file/d/1lgQFSKJSiteh6zSfQqcw9wXieIZLs79R/view?usp=sharing" target="_blank"> CV</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
